--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.12",
+    "lucide-react": "^0.445.0",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18"
