--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.12",
+    "axios": "^1.7.7",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
