--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_URL_ES_SITE=https://ciudades-de-cuidado.vercel.app
 NEXT_PUBLIC_URL_DE_SITE=https://sorgende-staedte.vercel.app
 NEXT_PUBLIC_URL_EN_SITE=https://caring-cities.vercel.app
+LOCALE=de
