fix locale switcher in local

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_URL_ES_SITE=https://ciudades-de-cuidado.org
 NEXT_PUBLIC_URL_DE_SITE=https://sorgende-staedte.org
 NEXT_PUBLIC_URL_EN_SITE=https://caring-cities.org
-LOCALE=de
+NEXT_PUBLIC_LOCALE=de
