--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_URL_DE_SITE=https://sorgende-staedte.vercel.app
 NEXT_PUBLIC_URL_EN_SITE=https://caring-cities.vercel.app
 NEXT_PUBLIC_LOCALE=es
 NEXT_PUBLIC_ENVIRONMENT=local
+LOCALE=en
