--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_URL_ES_SITE=https://ciudades-de-cuidado.vercel.app
 NEXT_PUBLIC_URL_DE_SITE=https://sorgende-staedte.vercel.app
 NEXT_PUBLIC_URL_EN_SITE=https://caring-cities.vercel.app
-NEXT_PUBLIC_LOCALE=es
+NEXT_PUBLIC_LOCALE=en
 NEXT_PUBLIC_ENVIRONMENT=local
 LOCALE=en
