--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.12",
     "axios": "^1.7.7",
+    "lucide-react": "^0.476.0",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
